# GoldBacktesting

./: .gitignore  build_dataset.py  download_vantage_d1.py
Solid2026/: .gitignore  README.md  Submitting_new_strategy.md  backtest_report.html  pyproject.toml  summarize_strategies.py  summarize_wave2.py  summarize_wave2_quick.py
Solid2026/.agent/workflows/: run-sprint.md
Solid2026/config/datasets/: starter.yaml
Solid2026/config/experiments/: _template.yaml  sprint_06_combo_model_A.yaml  sprint_06_combo_model_B.yaml  sprint_06_isolated_liquidity.yaml  sprint_06_modular_combo_A.yaml
Solid2026/config/global/: costs.yaml  data.yaml  evaluation.yaml  risk.yaml  sessions.yaml
Solid2026/data/manifests/: experiment_log.json  promotion_log.json  research.db
Solid2026/docs/: STRATEGY_INTAKE_TEMPLATE.md
Solid2026/experiments/ict/: full_confluence.yaml  full_confluence_m5.yaml  fvg_standalone.yaml  ob_standalone.yaml
Solid2026/journal/: architecture_ict.md
Solid2026/scripts/: gen_premium_report.py  gen_sprint06_summary.py  gen_strategy_robustness_html.py  gen_strategy_tearsheet_html.py  rerun_winner_detailed.py  run_asia_sweep_15m.py  run_asia_sweep_validation.py  run_ema_cross_15m.py  run_ict_event_pipeline.py  run_ict_full_backtest_m5.py  run_indicator_research.py  run_sprint04.py  run_sprint05.py  run_sprint06_isolated.py  run_sprint06_smc.py
Solid2026/scripts/robustness/: run_robustness_suite.py
Solid2026/src/gold_research/: __init__.py
Solid2026/tests/integration/: test_html_dashboard_smoke.py  test_pipeline_smoke.py  test_portfolio_smoke.py
(+432 files in other folders)
